# Synaptix

./: .gitignore  .trivy.yaml  ADD_NEW_DEVICES.md  Cargo.toml  DEEP_DIVE_ARCHITECTURE.md  LICENSE  README.md
.github/: AI_PROMPT_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: REPORT_BUG.md  REQUEST_FEATURE.md
.github/skills/wireshark-usb-analysis/: SKILL.md
.github/workflows/: ci.yml  security-scan.yml
crates/synaptix-daemon/: Cargo.toml
crates/synaptix-daemon/src/: config.rs  device_manager.rs  main.rs  razer_protocol.rs  tray.rs  usb_backend.rs
crates/synaptix-probe/: Cargo.toml
crates/synaptix-probe/src/: main.rs
crates/synaptix-protocol/: Cargo.toml
crates/synaptix-protocol/src/: lib.rs  registry.rs
crates/synaptix-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  wdio.conf.ts
crates/synaptix-ui/src/: App.battery.mockipc.test.tsx  App.tsx  Titlebar.tsx  index.css  main.tsx  test-setup.ts
crates/synaptix-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/synaptix-ui/src-tauri/capabilities/: default.json
crates/synaptix-ui/src-tauri/icons/: icon.icns
crates/synaptix-ui/src-tauri/src/: lib.rs  main.rs
crates/synaptix-ui/src/components/: DaemonUnavailableScreen.test.tsx  DaemonUnavailableScreen.tsx  DeviceCard.test.tsx  DeviceCard.tsx  DpiControl.tsx  LightingControl.tsx  ToggleSwitch.tsx
crates/synaptix-ui/src/components/headset/: AudioTab.tsx  HapticsTab.tsx  MicTab.tsx
crates/synaptix-ui/src/pages/: DeviceDetail.tsx
crates/synaptix-ui/tests/e2e/: battery.spec.ts
docs/: architecture.drawio
packaging/: 99-synaptix.rules  post_install.sh  synaptix-daemon.service
