[workspace]
members = [
    "crates/synaptix-protocol",
    "crates/synaptix-daemon",
    "crates/synaptix-ui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["Eduardo Zenardi"]
license = "MIT"
repository = "https://github.com/Zenardi/Synaptix"
homepage = "https://github.com/Zenardi/Synaptix"
