[package]
name = "synaptix-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synaptix-daemon"
path = "src/main.rs"

[dependencies]
synaptix-protocol = { path = "../synaptix-protocol" }
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde_json = "1"
