[package]
name = "synaptix-daemon"
description = "Headless Razer device daemon — bridges raw USB (rusb) hardware to a D-Bus interface (zbus)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "synaptix-daemon"
path = "src/main.rs"

[dependencies]
synaptix-protocol = { path = "../synaptix-protocol" }
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
serde_json = "1"
rusb = "0.9"
tray-icon = "0.14"
image = "0.24"
gtk = "0.18"
glib = "0.18"
notify-rust = "4"

[dev-dependencies]
futures-util = "0.3"
