[package]
name = "synaptix-protocol"
description = "Shared data contracts (device types, battery state, lighting effects) for the Synaptix workspace."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
