[package]
name = "synaptix-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "synaptix_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
synaptix-protocol = { path = "../../synaptix-protocol" }
