[package]
name = "synaptix-ui"
description = "Tauri-based GUI dashboard for Synaptix — D-Bus client and React/TypeScript frontend."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "synaptix_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
synaptix-protocol = { path = "../../synaptix-protocol" }
futures-util = "0.3"
